add core motion

--- a/Health/Application/Info.plist
+++ b/Health/Application/Info.plist
@@ -25,5 +25,7 @@
 			</array>
 		</dict>
 	</dict>
+    <key>NSMotionUsageDescription</key>
+    <string>We are using motion usage in order to track your step count.</string>
 </dict>
 </plist>
